@@ -538,6 +538,12 @@ Release 2.6.0 - UNRELEASED
     HDFS-6754. TestNamenodeCapacityReport may sometimes fail due to lack of
     retry. (Mit Desai via kihwal)
 
+    HDFS-7178. Additional unit test for replica write with full disk.
+    (Arpit Agarwal)
+
+    HDFS-7179. DFSClient should instantiate a KeyProvider, not a
+    KeyProviderCryptoExtension. (wang)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HDFS-6387. HDFS CLI admin tool for creating & deleting an
